# this is example-file: src/bin/Makefile.am

# additional include paths necessary to compile the C++ programs
#AM_CFLAGS = -DNW_LOG_TO_FILE -Wall -I/usr/local/include/ -I/usr/local/include/mylib/ -I$(top_srcdir)/nw-gtpv2c/shared -I$(top_srcdir)/nw-gtpv1u/shared -I$(top_srcdir)/nw-sdp/shared -I$(top_srcdir)/common -I$(top_srcdir)/include -I$(top_srcdir)/utils/nw-ipv4-if -I$(top_srcdir)/utils/nw-gtpv2c-if -I$(top_srcdir)/utils/nw-gtpu-if  -I$(top_srcdir)/utils/nw-log -I$(top_srcdir)/utils/nw-tmr -I$(top_srcdir)/utils/nw-ippool -I$(top_srcdir)/nw-event/include @AM_CFLAGS@

###############################################################################
# THE PROGRAMS TO BUILD
###############################################################################

# the program to build (the names of the final binaries)
# bin_PROGRAMS = nwLteSaeGw

nwEpc_PATH = ../../../../nwEPC/

SUBDIRS = $(nwEpc_PATH)



###############################################################################
